--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 #Context path
 server.port=8080
 server.servlet.context-path=/api/v1
+
 #Flyway config properties
 spring.flyway.user=admin
 spring.flyway.password=flyway_test_admin
-#spring.flyway.schemas=schemaName
+spring.flyway.schemas=PUBLIC
 spring.flyway.url=jdbc:h2:mem:flyway_test
 spring.flyway.locations=classpath:db/migration
 # Datasource
-spring.datasource.url=jdbc:h2:mem:flyway_test
+spring.datasource.url=jdbc:h2:mem:flyway_test;DB_CLOSE_DELAY=-1;
 spring.datasource.username=admin
 spring.datasource.password=flyway_test_admin
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=none
