JDTECHPR-10 adding assessment related logic (DB, entity, repo, DTO). Adding integration test

--- a/flyway-accelerator/build.gradle
+++ b/flyway-accelerator/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
 
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
+
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
