JDTECHPR-10 adding flyway placeholder example

--- a/flyway-accelerator/src/main/resources/application-qa.properties
+++ b/flyway-accelerator/src/main/resources/application-qa.properties
@@ -1,15 +1,15 @@
 #Context path
-server.port=8081
+server.port=8088
 server.servlet.context-path=/api/v1
 #Flyway config properties
 spring.flyway.user=admin
 spring.flyway.password=flyway_test_admin
 spring.flyway.schemas=PUBLIC
 spring.flyway.url=jdbc:h2:mem:flyway_test
-spring.flyway.locations=classpath:db/migration
-#Flyway placeholders
+spring.flyway.locations=classpath:prod/db/migration
+#FLyway placeholders
 # The placeholders could be later used in the migrations e.g. ${defaultUser}
-spring.flyway.placeholders.defaultUser=Admin
+spring.flyway.placeholders.defaultUser=QA Admin
 # Datasource
 spring.datasource.url=jdbc:h2:mem:flyway_test;DB_CLOSE_DELAY=-1;
 spring.datasource.username=admin
