--- a/flyway-accelerator/src/main/resources/application-qa.properties
+++ b/flyway-accelerator/src/main/resources/application-qa.properties
@@ -6,7 +6,8 @@ spring.flyway.user=admin
 spring.flyway.password=flyway_test_admin
 spring.flyway.schemas=PUBLIC
 spring.flyway.url=jdbc:h2:mem:flyway_test
-spring.flyway.locations=classpath:prod/db/migration
+# Java based migrations are used for QA
+spring.flyway.locations=classpath:com/softeq/accelerator/flyway/prod/db/migration
 #FLyway placeholders
 # The placeholders could be later used in the migrations e.g. ${defaultUser}
 spring.flyway.placeholders.defaultUser=QA Admin
