--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.flyway.user=admin
 spring.flyway.password=flyway_test_admin
 spring.flyway.schemas=PUBLIC
 spring.flyway.url=jdbc:h2:mem:flyway_test
+#SQL files based migrations are used by default
 spring.flyway.locations=classpath:db/migration
+# If Java classes migrations are necessary we need to use following line (should be used for QA)
+#spring.flyway.locations=classpath:com/softeq/accelerator/flyway/prod/db/migration
 #Flyway placeholders
 # The placeholders could be later used in the migrations e.g. ${defaultUser}
 spring.flyway.placeholders.defaultUser=Admin
