--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Context path
 server.port=8081
 server.servlet.context-path=/api/v1
+
 #Flyway config properties
 spring.flyway.user=admin
 spring.flyway.password=flyway_test_admin
@@ -22,3 +23,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
