--- a/flyway-accelerator/src/main/resources/application-qa.properties
+++ b/flyway-accelerator/src/main/resources/application-qa.properties
@@ -2,21 +2,20 @@
 server.port=8088
 server.servlet.context-path=/api/v1
 #Flyway config properties
-spring.flyway.user=admin
-spring.flyway.password=flyway_test_admin
-spring.flyway.schemas=PUBLIC
-spring.flyway.url=jdbc:h2:mem:flyway_test
+spring.flyway.user=postgres
+spring.flyway.password=pwd
+spring.flyway.schemas=public
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 # Java based migrations are used for QA
 spring.flyway.locations=classpath:com/softeq/accelerator/flyway/prod/db/migration
-#FLyway placeholders
+#Flyway placeholders
 # The placeholders could be later used in the migrations e.g. ${defaultUser}
 spring.flyway.placeholders.defaultUser=QA Admin
 # Datasource
-spring.datasource.url=jdbc:h2:mem:flyway_test;DB_CLOSE_DELAY=-1;
-spring.datasource.username=admin
-spring.datasource.password=flyway_test_admin
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=pwd
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.h2.console.enabled=false
+
