--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.flyway.locations=classpath:db/migration
 #Flyway placeholders
 # The placeholders could be later used in the migrations e.g. ${defaultUser}
 spring.flyway.placeholders.defaultUser=Admin
+spring.flyway.repeatable-sql-migration-prefix=Repeatable
 # Datasource
 spring.datasource.url=jdbc:h2:mem:flyway_test;DB_CLOSE_DELAY=-1;
 spring.datasource.username=admin
