--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Actuator
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoints.web.exposure.include=*,app-info
