JDTECHPR-22 adding some tests for actuator endpoints

--- a/flyway-accelerator/build.gradle
+++ b/flyway-accelerator/build.gradle
@@ -75,10 +75,10 @@ task readGradleProperties {
 	def appProps = new File('src/main/resources/application.properties')
 	def props = new Properties()
 	appProps.withReader { props.load(it) }
-	if (!props.containsKey("app.version")) {
+	if (!props.containsKey("info.app.version")) {
 		appProps.append("\n")
 		appProps.append("\n")
-		appProps.append("app.version=")
+		appProps.append("info.app.version=")
 		appProps.append(this.version.toString().replace("'", ""))
 	}
 }
