--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -31,4 +31,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Actuator
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
-management.endpoints.web.exposure.include=*,app-info
+management.endpoints.web.exposure.include=*,app-info,httptrace
