--- a/flyway-accelerator/src/main/resources/application.properties
+++ b/flyway-accelerator/src/main/resources/application.properties
@@ -35,3 +35,6 @@ logging.level.org.springframework=TRACE
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.endpoints.web.exposure.include=*,app-info,httptrace
+
+
+info.app.version=0.0.1-SNAPSHOT
