--- a/pdf-merger-accelerator/pom.xml
+++ b/pdf-merger-accelerator/pom.xml
@@ -8,11 +8,11 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>papercut-server</artifactId>
+    <groupId>com.softeq</groupId>
+    <artifactId>pdf-merger-accelerator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>papercut-server</name>
-    <description>Demo project for PaperCut integration</description>
+    <name>pdf-merger-accelerator</name>
+    <description>PDF Merger Accelerator</description>
 
     <properties>
         <java.version>1.8</java.version>
