--- a/edu-amilosh/build.gradle
+++ b/edu-amilosh/build.gradle
@@ -1,11 +1,17 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.4.0'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
-group 'com.softeq'
-version '0.0.0'
+group 'com.softeq.amilosh'
+version '0.0.1'
 sourceCompatibility = '14'
 
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
