--- a/edu-amilosh/build.gradle
+++ b/edu-amilosh/build.gradle
@@ -19,6 +19,8 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 checkstyle {
